--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nomad Travel - A Sua Agência de Viagens (Pacote Advanced)</title>
-    <meta name="description" content="Descubra pacotes de viagem inesquecíveis com a Nomad Travel. Design profissional e responsivo. [cite: 152]">
+    <title>Atlas Digital Viagens - Pacote Advanced (5 Páginas)</title>
+    <meta name="description" content="Descubra pacotes de viagem inesquecíveis com a Atlas Digital Viagens. Design profissional e responsivo.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <div class="logo">Nomad Travel</div>
+        <div class="logo">Atlas Digital</div>
         <nav>
             <a href="#home">Home</a>
-            <a href="#sobre">Sobre Nós</a>
+            <a href="#sobre">Sobre</a>
             <a href="#servicos">Pacotes/Serviços</a>
             <a href="#galeria">Galeria</a>
             <a href="#contacto" class="btn-contacto">Contacto</a>
@@ -22,8 +22,14 @@
 
     <section id="home" class="hero">
         <h1>A Sua Próxima Aventura Começa Aqui.</h1>
-        <p>Desenvolvemos o seu site institucional com a estrutura clara e profissional do Pacote Advanced.</p>
+        <p>Explore destinos inesquecíveis e planeie a sua viagem perfeita connosco.</p>
         <button class="cta-button">Ver Pacotes</button>
+    </section>
+
+    <section id="sobre" class="institucional">
+        <h2>A Nossa História</h2>
+        <p>Somos a Atlas Digital, uma agência nascida da paixão por explorar o mundo e pela tecnologia. Combinamos a experiência de viagens com soluções digitais de ponta para oferecer a si a melhor jornada, desde a reserva até ao destino.</p>
+        <p>Acreditamos que cada viagem deve ser única, personalizada e sem complicações. É por isso que o nosso design é sempre intuitivo e funcional.</p>
     </section>
 
     <section id="servicos" class="pacotes">
@@ -43,8 +49,20 @@
             </div>
     </section>
 
+    <section id="galeria" class="galeria">
+        <h2>As Nossas Experiências</h2>
+        <p>Inspire-se com algumas das viagens que ajudámos a criar. O mundo está à sua espera!</p>
+        <div class="galeria-grid">
+             <div class="galeria-item">Foto de Destino 1</div>
+            <div class="galeria-item">Foto de Destino 2</div>
+            <div class="galeria-item">Foto de Destino 3</div>
+            <div class="galeria-item">Foto de Destino 4</div>
+        </div>
+    </section>
+
     <section id="contacto" class="contacto">
         <h2>Fale Connosco</h2>
+        <p>Preencha o formulário para receber uma proposta personalizada ou agendar a sua consultoria.</p>
         <form action="#" method="POST">
             <input type="text" placeholder="Nome" required>
             <input type="email" placeholder="Email" required>
@@ -54,7 +72,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Nomad Travel. Desenvolvido por [Seu Nome] - Pacote Advanced.</p>
+        <p>&copy; 2025 Atlas Digital Viagens. Desenvolvido por [Seu Nome] - Pacote Advanced.</p>
     </footer>
 
     <script src="script.js"></script>
