--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="#galeria">Galeria</a>
             <a href="#contacto" class="btn-contacto">Contacto</a>
         </nav>
+        <div class="right-icon">NI</div> 
     </header>
 
     <section id="home" class="hero">
@@ -53,10 +54,10 @@
         <h2>As Nossas Experiências</h2>
         <p>Inspire-se com algumas das viagens que ajudámos a criar. O mundo está à sua espera!</p>
         <div class="galeria-grid">
-             <div class="galeria-item">Foto de Destino 1</div>
-            <div class="galeria-item">Foto de Destino 2</div>
-            <div class="galeria-item">Foto de Destino 3</div>
-            <div class="galeria-item">Foto de Destino 4</div>
+            <div class="galeria-item"><img src="https://via.placeholder.com/400x300/6A5ACD/FFFFFF?text=Paris" alt="Paris, França"></div>
+            <div class="galeria-item"><img src="https://via.placeholder.com/400x300/4682B4/FFFFFF?text=Bali" alt="Bali, Indonésia"></div>
+            <div class="galeria-item"><img src="https://via.placeholder.com/400x300/CD5C5C/FFFFFF?text=Kyoto" alt="Kyoto, Japão"></div>
+            <div class="galeria-item"><img src="https://via.placeholder.com/400x300/3CB371/FFFFFF?text=Rio" alt="Rio de Janeiro, Brasil"></div>
         </div>
     </section>
 
