--- a/sobre.html
+++ b/sobre.html
@@ -11,23 +11,24 @@
     <header>
         <div class="logo">Atlas Digital</div>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="sobre.html">Sobre</a>
             <a href="servicos.html">Pacotes/Serviços</a>
             <a href="galeria.html">Galeria</a>
             <a href="contacto.html" class="btn-contacto">Contacto</a>
         </nav>
+        <div class="right-icon">NI</div> 
     </header>
 
     <section id="sobre" class="institucional">
         <h2>A Nossa História</h2>
-        <p>Somos a Atlas Digital, uma agência nascida da paixão por explorar o mundo e pela tecnologia. Licenciados em Marketing e Desenvolvimento Front-End, combinamos a experiência de viagens com soluções digitais de ponta para oferecer a si a melhor jornada, desde a reserva até ao destino. [Baseado em: 11, 12]</p>
+        <p>Somos a Atlas Digital, uma agência nascida da paixão por explorar o mundo e pela tecnologia. Licenciados em Marketing e Desenvolvimento Front-End, combinamos a experiência de viagens com soluções digitais de ponta para oferecer a si a melhor jornada, desde a reserva até ao destino.</p>
         
         <h3>O Nosso Propósito</h3>
-        <p>O nosso foco é oferecer uma presença digital forte, profissional e atrativa [cite: 13], garantindo que cada cliente encontra o seu destino ideal com a máxima funcionalidade e atenção à experiência do utilizador[cite: 13].</p>
+        <p>O nosso foco é oferecer uma presença digital forte, profissional e atrativa, garantindo que cada cliente encontra o seu destino ideal com a máxima funcionalidade e atenção à experiência do utilizador.</p>
         
         <h3>A Equipa</h3>
-        <p>O nosso design responsivo [cite: 13] e a atenção aos detalhes garantem que a sua viagem está segura connosco. Vamos trabalhar juntos! [cite: 15]</p>
+        <p>O nosso design responsivo e a atenção aos detalhes garantem que a sua viagem está segura connosco. Vamos trabalhar juntos!</p>
     </section>
 
     <footer>
