--- a/servicos.html
+++ b/servicos.html
@@ -11,12 +11,13 @@
     <header>
         <div class="logo">Atlas Digital</div>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="sobre.html">Sobre</a>
             <a href="servicos.html">Pacotes/Serviços</a>
             <a href="galeria.html">Galeria</a>
             <a href="contacto.html" class="btn-contacto">Contacto</a>
         </nav>
+        <div class="right-icon">NI</div> 
     </header>
 
     <section id="servicos" class="pacotes">
