--- a/galeria.html
+++ b/galeria.html
@@ -11,17 +11,18 @@
     <header>
         <div class="logo">Atlas Digital</div>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="sobre.html">Sobre</a>
             <a href="servicos.html">Pacotes/Serviços</a>
             <a href="galeria.html">Galeria</a>
             <a href="contacto.html" class="btn-contacto">Contacto</a>
         </nav>
+        <div class="right-icon">NI</div> 
     </header>
 
     <section id="galeria" class="galeria">
         <h2>As Nossas Experiências</h2>
-        <p>Inspire-se com algumas das viagens que ajudámos a criar. O mundo está à sua espera! O Pacote Advanced inclui uma galeria de forma profissional[cite: 143].</p>
+        <p>Inspire-se com algumas das viagens que ajudámos a criar. O mundo está à sua espera! O Pacote Advanced inclui uma galeria de forma profissional.</p>
         
         <div class="galeria-grid">
             <div class="galeria-item">
