--- a/contacto.html
+++ b/contacto.html
@@ -11,17 +11,18 @@
     <header>
         <div class="logo">Atlas Digital</div>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="sobre.html">Sobre</a>
             <a href="servicos.html">Pacotes/Serviços</a>
             <a href="galeria.html">Galeria</a>
             <a href="contacto.html" class="btn-contacto">Contacto</a>
         </nav>
+        <div class="right-icon">NI</div> 
     </header>
 
     <section id="contacto" class="contacto">
         <h2>Fale Connosco</h2>
-        <p>O Pacote Advanced inclui um formulário de contacto funcional com validação e envio automático. Preencha o formulário para receber uma proposta personalizada ou agendar a sua consultoria de 50 minutos[cite: 154].</p>
+        <p>O Pacote Advanced inclui um formulário de contacto funcional com validação e envio automático. Preencha o formulário para receber uma proposta personalizada ou agendar a sua consultoria de 50 minutos.</p>
         <form action="#" method="POST">
             <input type="text" placeholder="Nome" required>
             <input type="email" placeholder="Email" required>
