--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atlas Digital Viagens - Pacote Advanced (5 Páginas)</title>
-    <meta name="description" content="Descubra pacotes de viagem inesquecíveis com a Atlas Digital Viagens. Design profissional e responsivo.">
+    <title>Home | Atlas Digital Viagens</title>
+    <meta name="description" content="A Sua Próxima Aventura Começa Aqui. Pacote Advanced.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header>
         <div class="logo">Atlas Digital</div>
         <nav>
-            <a href="#home">Home</a>
-            <a href="#sobre">Sobre</a>
-            <a href="#servicos">Pacotes/Serviços</a>
-            <a href="#galeria">Galeria</a>
-            <a href="#contacto" class="btn-contacto">Contacto</a>
+            <a href="index.html">Home</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="servicos.html">Pacotes/Serviços</a>
+            <a href="galeria.html">Galeria</a>
+            <a href="contacto.html" class="btn-contacto">Contacto</a>
         </nav>
         <div class="right-icon">NI</div> 
     </header>
@@ -24,52 +23,7 @@
     <section id="home" class="hero">
         <h1>A Sua Próxima Aventura Começa Aqui.</h1>
         <p>Explore destinos inesquecíveis e planeie a sua viagem perfeita connosco.</p>
-        <button class="cta-button">Ver Pacotes</button>
-    </section>
-
-    <section id="sobre" class="institucional">
-        <h2>A Nossa História</h2>
-        <p>Somos a Atlas Digital, uma agência nascida da paixão por explorar o mundo e pela tecnologia. Combinamos a experiência de viagens com soluções digitais de ponta para oferecer a si a melhor jornada, desde a reserva até ao destino.</p>
-        <p>Acreditamos que cada viagem deve ser única, personalizada e sem complicações. É por isso que o nosso design é sempre intuitivo e funcional.</p>
-    </section>
-
-    <section id="servicos" class="pacotes">
-        <h2>Pacotes de Viagem em Destaque</h2>
-
-        <div class="search-bar">
-            <input type="text" id="destino-search" placeholder="Buscar por Destino...">
-            <select id="filtro-preco">
-                <option value="todos">Qualquer Preço</option>
-                <option value="baixo">Abaixo de €1000</option>
-                <option value="alto">Acima de €1000</option>
-            </select>
-            <button onclick="filtrarPacotes()">Buscar</button>
-        </div>
-
-        <div class="pacote-list" id="pacote-list">
-            </div>
-    </section>
-
-    <section id="galeria" class="galeria">
-        <h2>As Nossas Experiências</h2>
-        <p>Inspire-se com algumas das viagens que ajudámos a criar. O mundo está à sua espera!</p>
-        <div class="galeria-grid">
-            <div class="galeria-item"><img src="https://via.placeholder.com/400x300/6A5ACD/FFFFFF?text=Paris" alt="Paris, França"></div>
-            <div class="galeria-item"><img src="https://via.placeholder.com/400x300/4682B4/FFFFFF?text=Bali" alt="Bali, Indonésia"></div>
-            <div class="galeria-item"><img src="https://via.placeholder.com/400x300/CD5C5C/FFFFFF?text=Kyoto" alt="Kyoto, Japão"></div>
-            <div class="galeria-item"><img src="https://via.placeholder.com/400x300/3CB371/FFFFFF?text=Rio" alt="Rio de Janeiro, Brasil"></div>
-        </div>
-    </section>
-
-    <section id="contacto" class="contacto">
-        <h2>Fale Connosco</h2>
-        <p>Preencha o formulário para receber uma proposta personalizada ou agendar a sua consultoria.</p>
-        <form action="#" method="POST">
-            <input type="text" placeholder="Nome" required>
-            <input type="email" placeholder="Email" required>
-            <textarea placeholder="Mensagem / Pergunta sobre o Pacote" required></textarea>
-            <button type="submit" class="cta-button">Enviar Pedido</button>
-        </form>
+        <a href="servicos.html" class="cta-button">Ver Pacotes</a>
     </section>
 
     <footer>
