--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Home | Atlas Digital Viagens</title>
     <meta name="description" content="A Sua Próxima Aventura Começa Aqui. Pacote Advanced.">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -23,11 +24,30 @@
     <section id="home" class="hero">
         <h1>A Sua Próxima Aventura Começa Aqui.</h1>
         <p>Explore destinos inesquecíveis e planeie a sua viagem perfeita connosco.</p>
+        <h2>Do Sonho à Realidade, Sem Complicações</h2>
+        <p>A Atlas Digital simplifica a sua experiência de planeamento, combinando a paixão por viagens exóticas com a tecnologia de ponta. Descubra o mundo com um clique.</p>
         <a href="servicos.html" class="cta-button">Ver Pacotes</a>
     </section>
 
-    <footer>
-        <p>&copy; 2025 Atlas Digital Viagens. Desenvolvido por [Seu Nome] - Pacote Advanced.</p>
+    <footer class="rich-footer">
+        <div class="container text-center"> 
+            <div class="social-links mb-6"> 
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
+            </div>
+            <div class="text-xs text-gray-500">
+                <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
+                <p class="mt-1">Website desenvolvido por 
+                    <a href="https://nadiairina.github.io/Nadia-Portfolio/" 
+                        target="_blank" 
+                        class="developer-link">
+                        [Seu Nome].
+                    </a>
+                </p>
+            </div>
+        </div>
     </footer>
 
     <script src="script.js"></script>
