--- a/servicos.html
+++ b/servicos.html
@@ -6,6 +6,7 @@
     <title>Pacotes e Serviços | Atlas Digital Viagens</title>
     <meta name="description" content="Explore todos os pacotes de viagem disponíveis.">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -20,9 +21,9 @@
         <div class="right-icon">NI</div> 
     </header>
 
-    <section id="servicos" class="pacotes">
+    <section id="servicos" class="pacotes container">
         <h2>Pacotes de Viagem em Destaque</h2>
-        <p>Use a nossa ferramenta de busca avançada para encontrar a viagem que melhor se adapta a si.</p>
+        <p>Use a nossa ferramenta de busca avançada para encontrar a viagem que melhor se adapta a si. Oferecemos desde escapadas urbanas a grandes expedições internacionais. **Funcionalidade de Busca Avançada incluída no Pacote Advanced.**</p>
 
         <div class="search-bar">
             <input type="text" id="destino-search" placeholder="Buscar por Destino...">
@@ -38,8 +39,25 @@
             </div>
     </section>
 
-    <footer>
-        <p>&copy; 2025 Atlas Digital Viagens. Desenvolvido por [Seu Nome] - Pacote Advanced.</p>
+    <footer class="rich-footer">
+        <div class="container text-center"> 
+            <div class="social-links mb-6"> 
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
+            </div>
+            <div class="text-xs text-gray-500">
+                <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
+                <p class="mt-1">Website desenvolvido por 
+                    <a href="https://nadiairina.github.io/Nadia-Portfolio/" 
+                        target="_blank" 
+                        class="developer-link">
+                        [Seu Nome].
+                    </a>
+                </p>
+            </div>
+        </div>
     </footer>
 
     <script src="script.js"></script>
