--- a/galeria.html
+++ b/galeria.html
@@ -6,6 +6,7 @@
     <title>Galeria | Atlas Digital Viagens</title>
     <meta name="description" content="Inspire-se com fotos de destinos inesquecíveis.">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -20,9 +21,9 @@
         <div class="right-icon">NI</div> 
     </header>
 
-    <section id="galeria" class="galeria">
+    <section id="galeria" class="galeria container">
         <h2>As Nossas Experiências</h2>
-        <p>Inspire-se com algumas das viagens que ajudámos a criar. O mundo está à sua espera! O Pacote Advanced inclui uma galeria de forma profissional.</p>
+        <p>Inspire-se com algumas das viagens que ajudámos a criar. O Pacote Advanced inclui uma galeria de fotos profissional com carregamento rápido e design responsivo.</p>
         
         <div class="galeria-grid">
             <div class="galeria-item">
@@ -41,12 +42,38 @@
                 <img src="https://via.placeholder.com/400x300/3CB371/FFFFFF?text=Rio" alt="Rio de Janeiro, Brasil">
                 <p>Sol e Samba no Rio (4 dias)</p>
             </div>
+             <div class="galeria-item">
+                <img src="https://via.placeholder.com/400x300/F4A460/FFFFFF?text=Egito" alt="Pirâmides do Egito">
+                <p>Mistérios do Nilo (8 dias)</p>
+            </div>
+             <div class="galeria-item">
+                <img src="https://via.placeholder.com/400x300/808080/FFFFFF?text=Alaska" alt="Aurora Boreal no Alasca">
+                <p>Aurora Boreal (6 dias)</p>
+            </div>
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2025 Atlas Digital Viagens. Desenvolvido por [Seu Nome] - Pacote Advanced.</p>
+    <footer class="rich-footer">
+        <div class="container text-center"> 
+            <div class="social-links mb-6"> 
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
+            </div>
+            <div class="text-xs text-gray-500">
+                <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
+                <p class="mt-1">Website desenvolvido por 
+                    <a href="https://nadiairina.github.io/Nadia-Portfolio/" 
+                        target="_blank" 
+                        class="developer-link">
+                        [Seu Nome].
+                    </a>
+                </p>
+            </div>
+        </div>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
