--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
     <title>Contacto | Atlas Digital Viagens</title>
     <meta name="description" content="Entre em contacto para começar a planear a sua viagem.">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -20,20 +21,42 @@
         <div class="right-icon">NI</div> 
     </header>
 
-    <section id="contacto" class="contacto">
+    <section id="contacto" class="contacto container">
         <h2>Fale Connosco</h2>
-        <p>O Pacote Advanced inclui um formulário de contacto funcional com validação e envio automático. Preencha o formulário para receber uma proposta personalizada ou agendar a sua consultoria de 50 minutos.</p>
+        <p>Preencha o formulário para receber uma proposta personalizada ou agendar a sua consultoria de 50 minutos. **O formulário de contacto funcional é uma das vantagens do Pacote Advanced.**</p>
+        
+        <p style="margin-top: 20px;">Prefere ligar? Encontre-nos em: <br>Email: info@atlasdigitalviagens.pt | Telefone: +351 9XX XXX XXX</p>
+
         <form action="#" method="POST">
             <input type="text" placeholder="Nome" required>
             <input type="email" placeholder="Email" required>
+            <input type="text" placeholder="Destino de Sonho / Assunto" required>
             <textarea placeholder="Mensagem / Pergunta sobre o Pacote" required></textarea>
             <button type="submit" class="cta-button">Enviar Pedido</button>
         </form>
     </section>
 
-    <footer>
-        <p>&copy; 2025 Atlas Digital Viagens. Desenvolvido por [Seu Nome] - Pacote Advanced.</p>
+    <footer class="rich-footer">
+        <div class="container text-center"> 
+            <div class="social-links mb-6"> 
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
+            </div>
+            <div class="text-xs text-gray-500">
+                <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
+                <p class="mt-1">Website desenvolvido por 
+                    <a href="https://nadiairina.github.io/Nadia-Portfolio/" 
+                        target="_blank" 
+                        class="developer-link">
+                        [Seu Nome].
+                    </a>
+                </p>
+            </div>
+        </div>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
