--- a/servicos.html
+++ b/servicos.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pacotes e Serviços | Atlas Digital Viagens</title>
-    <meta name="description" content="Explore todos os pacotes de viagem disponíveis.">
-    <link rel="stylesheet" href="style.css">
+    <title>Pacotes e Serviços | Atlas Digital Viagens - Explore o Mundo Agora!</title> <meta name="description" content="Explore todos os pacotes de viagem disponíveis. Use a nossa busca avançada para encontrar o seu destino perfeito."> <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -32,7 +30,7 @@
                 <option value="baixo">Abaixo de €1000</option>
                 <option value="alto">Acima de €1000</option>
             </select>
-            <button onclick="filtrarPacotes()">Buscar</button>
+            <button id="botao-busca">Buscar</button>
         </div>
 
         <div class="pacote-list" id="pacote-list">
