--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Atlas Digital Viagens</title>
-    <meta name="description" content="A Sua Próxima Aventura Começa Aqui. Pacote Advanced.">
-    <link rel="stylesheet" href="style.css">
+    <title>Atlas Digital Viagens | Planeie a Sua Aventura Perfeita (Advanced)</title> <meta name="description" content="A Sua Próxima Aventura Começa Aqui. Explore destinos inesquecíveis e comece a planear a sua viagem perfeita com o nosso Pacote Advanced."> <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -24,7 +22,7 @@
     <section id="home" class="hero">
         <h1>A Sua Próxima Aventura Começa Aqui.</h1>
         <p>Explore destinos inesquecíveis e planeie a sua viagem perfeita connosco.</p>
-        <h2>Do Sonho à Realidade, Sem Complicações</h2>
+        <h3>Do Sonho à Realidade, Sem Complicações</h3> 
         <p>A Atlas Digital simplifica a sua experiência de planeamento, combinando a paixão por viagens exóticas com a tecnologia de ponta. Descubra o mundo com um clique.</p>
         <a href="servicos.html" class="cta-button">Ver Pacotes</a>
     </section>
