--- a/galeria.html
+++ b/galeria.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria | Atlas Digital Viagens</title>
-    <meta name="description" content="Inspire-se com fotos de destinos inesquecíveis.">
-    <link rel="stylesheet" href="style.css">
+    <title>Galeria de Destinos | Inspiração para a Sua Próxima Viagem</title> <meta name="description" content="Inspire-se com fotos de destinos inesquecíveis. Galeria profissional com carregamento rápido, incluída no Pacote Advanced."> <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -27,20 +25,20 @@
         
         <div class="galeria-grid">
             <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/6A5ACD/FFFFFF?text=Paris" alt="Paris, França">
-                <p>A Cidade Luz (5 dias)</p>
+                <img src="https://via.placeholder.com/400x300/6A5ACD/FFFFFF?text=Bali" alt="Retiro em Bali">
+                <p>Retiro em Bali (10 dias)</p>
+            </div>
+            <div class="galeria-item">
+                <img src="https://via.placeholder.com/400x300/4682B4/FFFFFF?text=Porto" alt="Estátua de Vítor Manuel II, Porto">
+                <p>Escapada no Porto (3 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/4682B4/FFFFFF?text=Bali" alt="Bali, Indonésia">
-                <p>Relaxamento em Bali (7 dias)</p>
+                <img src="https://via.placeholder.com/400x300/F08080/FFFFFF?text=Paris" alt="Torre Eiffel, Paris">
+                <p>Romance em Paris (5 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/CD5C5C/FFFFFF?text=Kyoto" alt="Kyoto, Japão">
-                <p>Cultura em Kyoto (10 dias)</p>
-            </div>
-             <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/3CB371/FFFFFF?text=Rio" alt="Rio de Janeiro, Brasil">
-                <p>Sol e Samba no Rio (4 dias)</p>
+                <img src="https://via.placeholder.com/400x300/228B22/FFFFFF?text=Nova+Iorque" alt="Nova Iorque, Times Square">
+                <p>A Cidade que Nunca Dorme (7 dias)</p>
             </div>
              <div class="galeria-item">
                 <img src="https://via.placeholder.com/400x300/F4A460/FFFFFF?text=Egito" alt="Pirâmides do Egito">
