--- a/contacto.html
+++ b/contacto.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto | Atlas Digital Viagens</title>
-    <meta name="description" content="Entre em contacto para começar a planear a sua viagem.">
-    <link rel="stylesheet" href="style.css">
+    <title>Contacte a Atlas Digital Viagens | Obtenha a Sua Proposta</title> <meta name="description" content="Entre em contacto para começar a planear a sua viagem. Formulário de contacto funcional incluído no Pacote Advanced."> <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -25,9 +23,9 @@
         <h2>Fale Connosco</h2>
         <p>Preencha o formulário para receber uma proposta personalizada ou agendar a sua consultoria de 50 minutos. **O formulário de contacto funcional é uma das vantagens do Pacote Advanced.**</p>
         
-        <p style="margin-top: 20px;">Prefere ligar? Encontre-nos em: <br>Email: info@atlasdigitalviagens.pt | Telefone: +351 9XX XXX XXX</p>
+        <p style="margin-top: 20px;">Prefere ligar? Encontre-nos em: <br>Email: info@atlasdigitalviagens.pt | Telefone: +351 91XXXXXXX</p>
 
-        <form action="#" method="POST">
+        <form method="POST" action="#form-submit"> 
             <input type="text" placeholder="Nome" required>
             <input type="email" placeholder="Email" required>
             <input type="text" placeholder="Destino de Sonho / Assunto" required>
