--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
-<section id="home" class="hero">
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Atlas Digital Viagens | Planeie a Sua Aventura Perfeita (Advanced)</title> <meta name="description" content="A Sua Próxima Aventura Começa Aqui. Explore destinos inesquecíveis e comece a planear a sua viagem perfeita com o nosso Pacote Advanced."> <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+    <header>
+        <div class="logo">Atlas Digital</div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="servicos.html">Pacotes/Serviços</a>
+            <a href="galeria.html">Galeria</a>
+            <a href="contacto.html" class="btn-contacto">Contacto</a>
+        </nav>
+        <div class="right-icon">NI</div> 
+    </header>
+
+    <section id="home" class="hero">
         <h1>A Sua Próxima Aventura Começa Aqui.</h1>
         <p>Explore destinos inesquecíveis e planeie a sua viagem perfeita connosco.</p>
         <h3>Do Sonho à Realidade, Sem Complicações</h3> 
@@ -25,12 +46,12 @@
                 <p>Apoio constante antes, durante e após a sua viagem, em qualquer fuso horário.</p>
             </div>
         </div>
-        <a href="sobre.html" class="cta-button secondary-cta">Conheça-nos Melhor</a>
+        <a href="sobre.html" class="cta-button secondary-cta">Conheça as Nossas Vantagens</a>
     </section>
 
     <section id="pacotes-home" class="pacotes-home container">
         <h2>Os Mais Vendidos do Mês</h2>
-        <p>Veja os destinos que os nossos clientes mais adoraram recentemente. Não perca estas oportunidades!</p>
+        <p>Veja os destinos que os nossos clientes mais adoraram. Não perca estas oportunidades!</p>
         <div class="pacote-list home-teaser-grid">
             <div class="pacote-card">
                 <img src="https://via.placeholder.com/300x200/5D54A4/FFFFFF?text=Grécia" alt="Ilhas Gregas">
@@ -64,7 +85,7 @@
     </section>
 
     <footer class="rich-footer">
-</footer>
+        </footer>
     <script src="script.js"></script>
 </body>
 </html>
