--- a/contacto.html
+++ b/contacto.html
@@ -3,27 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacte a Atlas Digital Viagens | Obtenha a Sua Proposta</title> <meta name="description" content="Entre em contacto para começar a planear a sua viagem. Formulário de contacto funcional incluído no Pacote Advanced."> <link rel="stylesheet" href="style.css">
+    <title>Contacte a Atlas Digital Viagens | Mapa e Garantia de Resposta</title> <meta name="description" content="Entre em contacto connosco. Veja a nossa localização no mapa e a nossa garantia de resposta rápida. Formulário funcional incluído no Pacote Advanced."> <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
-        <div class="logo">Atlas Digital</div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="sobre.html">Sobre</a>
-            <a href="servicos.html">Pacotes/Serviços</a>
-            <a href="galeria.html">Galeria</a>
-            <a href="contacto.html" class="btn-contacto">Contacto</a>
-        </nav>
-        <div class="right-icon">NI</div> 
-    </header>
+        </header>
 
     <section id="contacto" class="contacto container">
         <h2>Fale Connosco</h2>
         <p>Preencha o formulário para receber uma proposta personalizada ou agendar a sua consultoria de 50 minutos. **O formulário de contacto funcional é uma das vantagens do Pacote Advanced.**</p>
         
-        <p style="margin-top: 20px;">Prefere ligar? Encontre-nos em: <br>Email: info@atlasdigitalviagens.pt | Telefone: +351 91XXXXXXX</p>
+        <p style="margin-top: 20px;">Prefere ligar? Encontre-nos em: <br>Email: **info@atlasdigitalviagens.pt** | Telefone: **+351 9XX XXX XXX**</p>
+        
+        <div class="contact-info-grid">
+            <div>
+                <h3>Horário de Atendimento</h3>
+                <p>Segunda a Sexta: 9:00 - 18:00 (Para marcação de consultoria)</p>
+                <p>Suporte 24/7 para Clientes em Viagem.</p>
+            </div>
+            <div>
+                <h3>Garantia de Resposta</h3>
+                <p>Comprometemo-nos a responder a todos os pedidos de orçamento em **até 24 horas** úteis.</p>
+                <p>A sua viagem de sonho não pode esperar.</p>
+            </div>
+        </div>
 
         <form method="POST" action="#form-submit"> 
             <input type="text" placeholder="Nome" required>
@@ -34,26 +38,16 @@
         </form>
     </section>
 
-    <footer class="rich-footer">
-        <div class="container text-center"> 
-            <div class="social-links mb-6"> 
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
-            </div>
-            <div class="text-xs text-gray-500">
-                <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
-                <p class="mt-1">Website desenvolvido por 
-                    <a href="https://nadiairina.github.io/Nadia-Portfolio/" 
-                        target="_blank" 
-                        class="developer-link">
-                        [Seu Nome].
-                    </a>
-                </p>
-            </div>
+    <section id="localizacao" class="localizacao container">
+        <h2>Onde Estamos</h2>
+        <p>Visite-nos com hora marcada ou use o mapa para nos encontrar.</p>
+        <div class="map-placeholder">
+                        <p style="padding: 20px; background-color: #f0f0f0;">**Placeholder para Mapa Interativo (Google Maps iFrame)**</p>
         </div>
-    </footer>
+    </section>
+
+    <footer class="rich-footer">
+        </footer>
 
     <script src="script.js"></script>
 </body>
