--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atlas Digital Viagens | Planeie a Sua Aventura Perfeita (Advanced)</title> <meta name="description" content="A Sua Próxima Aventura Começa Aqui. Explore destinos inesquecíveis e comece a planear a sua viagem perfeita com o nosso Pacote Advanced."> <link rel="stylesheet" href="style.css">
+    <title>Home | Atlas Digital Viagens</title>
+    <meta name="description" content="A Sua Próxima Aventura Começa Aqui. Pacote Advanced.">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -22,70 +24,32 @@
     <section id="home" class="hero">
         <h1>A Sua Próxima Aventura Começa Aqui.</h1>
         <p>Explore destinos inesquecíveis e planeie a sua viagem perfeita connosco.</p>
-        <h3>Do Sonho à Realidade, Sem Complicações</h3> 
+        <h2>Do Sonho à Realidade, Sem Complicações</h2>
         <p>A Atlas Digital simplifica a sua experiência de planeamento, combinando a paixão por viagens exóticas com a tecnologia de ponta. Descubra o mundo com um clique.</p>
         <a href="servicos.html" class="cta-button">Ver Pacotes</a>
     </section>
 
-    <section id="features" class="features container">
-        <h2>Porquê Viajar com a Atlas Digital?</h2>
-        <div class="feature-grid">
-            <div class="feature-card">
-                <i class="fas fa-magic icon-lg"></i>
-                <h3>Personalização Advanced</h3>
-                <p>Itinerários criados à sua medida, com consultoria dedicada e sem surpresas.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-handshake icon-lg"></i>
-                <h3>Preço & Confiança</h3>
-                <p>Garantia dos melhores preços e transparência total, sem taxas escondidas.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-headset icon-lg"></i>
-                <h3>Suporte 24/7</h3>
-                <p>Apoio constante antes, durante e após a sua viagem, em qualquer fuso horário.</p>
-            </div>
-        </div>
-        <a href="sobre.html" class="cta-button secondary-cta">Conheça as Nossas Vantagens</a>
-    </section>
-
-    <section id="pacotes-home" class="pacotes-home container">
-        <h2>Os Mais Vendidos do Mês</h2>
-        <p>Veja os destinos que os nossos clientes mais adoraram. Não perca estas oportunidades!</p>
-        <div class="pacote-list home-teaser-grid">
-            <div class="pacote-card">
-                <img src="https://via.placeholder.com/300x200/5D54A4/FFFFFF?text=Grécia" alt="Ilhas Gregas">
-                <div class="pacote-info">
-                    <h3>Atenas & Ilhas Gregas</h3>
-                    <p>8 dias de história e praias paradisíacas.</p>
-                    <div class="price">€1250</div>
-                    <a href="servicos.html" class="cta-button">Ver Detalhes</a>
-                </div>
-            </div>
-             <div class="pacote-card">
-                <img src="https://via.placeholder.com/300x200/5D54A4/FFFFFF?text=Tailândia" alt="Templos Tailândia">
-                <div class="pacote-info">
-                    <h3>Aventuras na Tailândia</h3>
-                    <p>15 dias de cultura, mercados e selvas.</p>
-                    <div class="price">€1799</div>
-                    <a href="servicos.html" class="cta-button">Ver Detalhes</a>
-                </div>
-            </div>
-        </div>
-        <a href="servicos.html" class="cta-button">Ver Todos os Pacotes</a>
-    </section>
-
-    <section id="testemunhos" class="testemunhos-slider container">
-        <h2>O que os Nossos Clientes Dizem</h2>
-        <div class="testemunho-card">
-            <blockquote>"A melhor experiência de planeamento que já tive. O suporte 24/7 foi fundamental. Voltarei a usar, com certeza!"</blockquote>
-            <p class="author">- Ana P., Nova Iorque</p>
-        </div>
-        <a href="contacto.html" class="cta-button secondary-cta">Comece a Sua Viagem</a>
-    </section>
-
     <footer class="rich-footer">
-        </footer>
+        <div class="container text-center"> 
+            <div class="social-links mb-6"> 
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
+            </div>
+            <div class="text-xs text-gray-500">
+                <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
+                <p class="mt-1">Website desenvolvido por 
+                    <a href="https://nadiairina.github.io/Nadia-Portfolio/" 
+                        target="_blank" 
+                        class="developer-link">
+                        [Seu Nome].
+                    </a>
+                </p>
+            </div>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
