--- a/servicos.html
+++ b/servicos.html
@@ -3,58 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pacotes e Serviços de Viagem | Busca Avançada e Ofertas Exclusivas (Advanced)</title> <meta name="description" content="Explore todos os pacotes de viagem disponíveis com filtros avançados por destino, preço, duração e tipo de viagem. Ofertas exclusivas incluídas."> <link rel="stylesheet" href="style.css">
+    <title>Pacotes e Serviços | Atlas Digital Viagens</title>
+    <meta name="description" content="Explore todos os pacotes de viagem disponíveis.">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
-        </header>
-
-    <section id="promo-banner" class="promo-banner container">
-        <p>✨ **OFERTA ESPECIAL DE INVERNO:** 15% de Desconto em todas as viagens de neve! Válido até 31 de Dezembro.</p>
-        <a href="#pacote-list" class="cta-button">Ver Viagens de Inverno</a>
-    </section>
+        <div class="logo">Atlas Digital</div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="servicos.html">Pacotes/Serviços</a>
+            <a href="galeria.html">Galeria</a>
+            <a href="contacto.html" class="btn-contacto">Contacto</a>
+        </nav>
+        <div class="right-icon">NI</div> 
+    </header>
 
     <section id="servicos" class="pacotes container">
         <h2>Pacotes de Viagem em Destaque</h2>
-        <p>Use a nossa ferramenta de busca avançada (Pacote Advanced) para encontrar a viagem que melhor se adapta a si.</p>
+        <p>Use a nossa ferramenta de busca avançada para encontrar a viagem que melhor se adapta a si. Oferecemos desde escapadas urbanas a grandes expedições internacionais. **Funcionalidade de Busca Avançada incluída no Pacote Advanced.**</p>
 
-        <div class="search-bar expanded-search-bar">
+        <div class="search-bar">
             <input type="text" id="destino-search" placeholder="Buscar por Destino...">
             <select id="filtro-preco">
                 <option value="todos">Qualquer Preço</option>
                 <option value="baixo">Abaixo de €1000</option>
                 <option value="alto">Acima de €1000</option>
             </select>
-            <select id="filtro-duracao">
-                <option value="todos">Qualquer Duração</option>
-                <option value="curta">Escapadas (1-4 dias)</option>
-                <option value="media">Média (5-10 dias)</option>
-                <option value="longa">Longa (+10 dias)</option>
-            </select>
-            <select id="filtro-tipo">
-                <option value="todos">Qualquer Tipo</option>
-                <option value="aventura">Aventura</option>
-                <option value="relaxamento">Relaxamento/Praia</option>
-                <option value="cultura">Cultura/Cidade</option>
-            </select>
-            <button id="botao-busca">Buscar</button> 
+            <button onclick="filtrarPacotes()">Buscar</button>
         </div>
 
         <div class="pacote-list" id="pacote-list">
             </div>
     </section>
 
-    <section id="customizados" class="customizados-cta">
-        <div class="container">
-            <h3>Não Encontrou o Pacote Perfeito?</h3>
-            <p>Os nossos especialistas criam o seu itinerário do zero. Viagens 100% personalizadas, com o conforto do Pacote Advanced.</p>
-            <a href="contacto.html" class="cta-button secondary-cta">Crie a Sua Viagem Personalizada</a>
-        </div>
-    </section>
-
     <footer class="rich-footer">
-        </footer>
+        <div class="container text-center"> 
+            <div class="social-links mb-6"> 
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
+            </div>
+            <div class="text-xs text-gray-500">
+                <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
+                <p class="mt-1">Website desenvolvido por 
+                    <a href="https://nadiairina.github.io/Nadia-Portfolio/" 
+                        target="_blank" 
+                        class="developer-link">
+                        [Seu Nome].
+                    </a>
+                </p>
+            </div>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
