--- a/galeria.html
+++ b/galeria.html
@@ -3,31 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria de Destinos | Inspiração para a Sua Próxima Viagem</title> <meta name="description" content="Inspire-se com fotos de destinos inesquecíveis. Galeria profissional com carregamento rápido e CTA para iniciar a sua reserva."> <link rel="stylesheet" href="style.css">
+    <title>Galeria | Atlas Digital Viagens</title>
+    <meta name="description" content="Inspire-se com fotos de destinos inesquecíveis.">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
-        </header>
+        <div class="logo">Atlas Digital</div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="servicos.html">Pacotes/Serviços</a>
+            <a href="galeria.html">Galeria</a>
+            <a href="contacto.html" class="btn-contacto">Contacto</a>
+        </nav>
+        <div class="right-icon">NI</div> 
+    </header>
 
     <section id="galeria" class="galeria container">
         <h2>As Nossas Experiências</h2>
         <p>Inspire-se com algumas das viagens que ajudámos a criar. O Pacote Advanced inclui uma galeria de fotos profissional com carregamento rápido e design responsivo.</p>
         
         <div class="galeria-grid">
+            <div class="galeria-item">
+                <img src="https://via.placeholder.com/400x300/6A5ACD/FFFFFF?text=Paris" alt="Paris, França">
+                <p>A Cidade Luz (5 dias)</p>
             </div>
-    </section>
-
-    <section id="galeria-cta" class="galeria-cta">
-        <div class="container">
-            <h2>Gostou do que Viu?</h2>
-            <p>Transforme a sua inspiração em realidade. Fale com um especialista hoje e comece a desenhar o seu itinerário perfeito.</p>
-            <a href="contacto.html" class="cta-button">Falar com um Consultor</a>
+             <div class="galeria-item">
+                <img src="https://via.placeholder.com/400x300/4682B4/FFFFFF?text=Bali" alt="Bali, Indonésia">
+                <p>Relaxamento em Bali (7 dias)</p>
+            </div>
+             <div class="galeria-item">
+                <img src="https://via.placeholder.com/400x300/CD5C5C/FFFFFF?text=Kyoto" alt="Kyoto, Japão">
+                <p>Cultura em Kyoto (10 dias)</p>
+            </div>
+             <div class="galeria-item">
+                <img src="https://via.placeholder.com/400x300/3CB371/FFFFFF?text=Rio" alt="Rio de Janeiro, Brasil">
+                <p>Sol e Samba no Rio (4 dias)</p>
+            </div>
+             <div class="galeria-item">
+                <img src="https://via.placeholder.com/400x300/F4A460/FFFFFF?text=Egito" alt="Pirâmides do Egito">
+                <p>Mistérios do Nilo (8 dias)</p>
+            </div>
+             <div class="galeria-item">
+                <img src="https://via.placeholder.com/400x300/808080/FFFFFF?text=Alaska" alt="Aurora Boreal no Alasca">
+                <p>Aurora Boreal (6 dias)</p>
+            </div>
         </div>
     </section>
 
     <footer class="rich-footer">
-        </footer>
+        <div class="container text-center"> 
+            <div class="social-links mb-6"> 
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
+                <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
+            </div>
+            <div class="text-xs text-gray-500">
+                <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
+                <p class="mt-1">Website desenvolvido por 
+                    <a href="https://nadiairina.github.io/Nadia-Portfolio/" 
+                        target="_blank" 
+                        class="developer-link">
+                        [Seu Nome].
+                    </a>
+                </p>
+            </div>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
