--- a/sobre.html
+++ b/sobre.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nós | Atlas Digital Viagens</title>
-    <meta name="description" content="Conheça a nossa agência e a nossa paixão por viagens.">
+    <title>Sobre Nós | Atlas Digital Viagens (Modernizado)</title> 
+    <meta name="description" content="Conheça a nossa agência, o nosso processo de planeamento de viagens de 4 passos, FAQ e a equipa de especialistas."> 
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -38,15 +39,65 @@
         <p>A nossa equipa é composta por especialistas em viagens e licenciados em Marketing e Desenvolvimento Front-End (como o seu perfil!), garantindo que a sua presença digital e as suas férias estão em mãos seguras.</p>
     </section>
 
+    <section id="processo" class="processo-viagem container">
+        <h2>O Nosso Processo de Viagem em 4 Passos</h2>
+        <p>Simplificamos a sua aventura desde a ideia até à chegada. A sua experiência de sonho, garantida passo a passo.</p>
+        <div class="processo-grid">
+            <div class="processo-step">
+                <i class="fas fa-search icon-lg"></i>
+                <h3>1. Inspirar & Explorar</h3>
+                <p>Use a nossa busca avançada para encontrar pacotes ou comece com o seu destino de sonho.</p>
+            </div>
+            <div class="processo-step">
+                <i class="fas fa-comments icon-lg"></i>
+                <h3>2. Consultoria Personalizada</h3>
+                <p>Ajuste o itinerário com o nosso especialista. Duração, atividades e alojamento à sua medida.</p>
+            </div>
+            <div class="processo-step">
+                <i class="fas fa-check-circle icon-lg"></i>
+                <h3>3. Confirmação Digital</h3>
+                <p>Reserve e pague de forma segura. Todos os documentos de viagem são enviados digitalmente e em app.</p>
+            </div>
+            <div class="processo-step">
+                <i class="fas fa-plane-departure icon-lg"></i>
+                <h3>4. Aventura & Suporte</h3>
+                <p>Viaje tranquilo(a). Oferecemos suporte 24/7 em todo o mundo, para qualquer imprevisto.</p>
+            </div>
+        </div>
+        <a href="contacto.html" class="cta-button secondary-cta">Comece o Seu Planeamento Agora</a>
+    </section>
+
+    <section id="faq" class="faq container">
+        <h2>Perguntas Frequentes</h2>
+        <div class="faq-item">
+            <button class="faq-question">Quais são as opções de pagamento?</button>
+            <div class="faq-answer">
+                <p>Aceitamos Multibanco, MB WAY, Transferência Bancária e todos os principais cartões de crédito. Oferecemos opções de pagamento flexível para viagens a longo prazo.</p>
+            </div>
+        </div>
+        <div class="faq-item">
+            <button class="faq-question">Os pacotes incluem seguro de viagem?</button>
+            <div class="faq-answer">
+                <p>Todos os nossos pacotes Advanced incluem uma cobertura base de seguro. Opções de cobertura premium estão disponíveis no momento da reserva.</p>
+            </div>
+        </div>
+        <div class="faq-item">
+            <button class="faq-question">Posso cancelar ou alterar a minha reserva?</button>
+            <div class="faq-answer">
+                <p>A nossa política varia consoante o pacote e o prazo de cancelamento. Consulte os termos e condições específicos para o seu pacote ou contacte a nossa equipa.</p>
+            </div>
+        </div>
+    </section>
+
     <footer class="rich-footer">
         <div class="container text-center"> 
-            <div class="social-links mb-6"> 
+            <div class="social-links"> 
                 <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
                 <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
                 <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
             </div>
-            <div class="text-xs text-gray-500">
+            <div class="text-xs">
                 <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
                 <p class="mt-1">Website desenvolvido por 
                     <a href="https://nadiairina.github.io/Nadia-Portfolio/" 
@@ -58,7 +109,6 @@
             </div>
         </div>
     </footer>
-
     <script src="script.js"></script>
 </body>
 </html>
