--- a/galeria.html
+++ b/galeria.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria | Atlas Digital Viagens</title>
+    <title>Galeria | Atlas Digital Viagens (Modernizado)</title>
     <meta name="description" content="Inspire-se com fotos de destinos inesquecíveis.">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -27,27 +28,27 @@
         
         <div class="galeria-grid">
             <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/6A5ACD/FFFFFF?text=Paris" alt="Paris, França">
+                <img src="https://via.placeholder.com/400x300/4A3B95/FFFFFF?text=Paris" alt="Paris, França">
                 <p>A Cidade Luz (5 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/4682B4/FFFFFF?text=Bali" alt="Bali, Indonésia">
+                <img src="https://via.placeholder.com/400x300/00A5B7/FFFFFF?text=Bali" alt="Bali, Indonésia">
                 <p>Relaxamento em Bali (7 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/CD5C5C/FFFFFF?text=Kyoto" alt="Kyoto, Japão">
+                <img src="https://via.placeholder.com/400x300/4A3B95/FFFFFF?text=Kyoto" alt="Kyoto, Japão">
                 <p>Cultura em Kyoto (10 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/3CB371/FFFFFF?text=Rio" alt="Rio de Janeiro, Brasil">
+                <img src="https://via.placeholder.com/400x300/00A5B7/FFFFFF?text=Rio" alt="Rio de Janeiro, Brasil">
                 <p>Sol e Samba no Rio (4 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/F4A460/FFFFFF?text=Egito" alt="Pirâmides do Egito">
+                <img src="https://via.placeholder.com/400x300/4A3B95/FFFFFF?text=Egito" alt="Pirâmides do Egito">
                 <p>Mistérios do Nilo (8 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/808080/FFFFFF?text=Alaska" alt="Aurora Boreal no Alasca">
+                <img src="https://via.placeholder.com/400x300/00A5B7/FFFFFF?text=Alaska" alt="Aurora Boreal no Alasca">
                 <p>Aurora Boreal (6 dias)</p>
             </div>
         </div>
@@ -55,13 +56,13 @@
 
     <footer class="rich-footer">
         <div class="container text-center"> 
-            <div class="social-links mb-6"> 
+            <div class="social-links"> 
                 <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
                 <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
                 <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
             </div>
-            <div class="text-xs text-gray-500">
+            <div class="text-xs">
                 <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
                 <p class="mt-1">Website desenvolvido por 
                     <a href="https://nadiairina.github.io/Nadia-Portfolio/" 
@@ -73,7 +74,6 @@
             </div>
         </div>
     </footer>
-
     <script src="script.js"></script>
 </body>
 </html>
