--- a/contacto.html
+++ b/contacto.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto | Atlas Digital Viagens</title>
+    <title>Contacto | Atlas Digital Viagens (Modernizado)</title>
     <meta name="description" content="Entre em contacto para começar a planear a sua viagem.">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -38,13 +39,13 @@
 
     <footer class="rich-footer">
         <div class="container text-center"> 
-            <div class="social-links mb-6"> 
+            <div class="social-links"> 
                 <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
                 <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
                 <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
             </div>
-            <div class="text-xs text-gray-500">
+            <div class="text-xs">
                 <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
                 <p class="mt-1">Website desenvolvido por 
                     <a href="https://nadiairina.github.io/Nadia-Portfolio/" 
@@ -56,7 +57,6 @@
             </div>
         </div>
     </footer>
-
     <script src="script.js"></script>
 </body>
 </html>
