--- a/galeria.html
+++ b/galeria.html
@@ -19,7 +19,7 @@
             <a href="galeria.html">Galeria</a>
             <a href="contacto.html" class="btn-contacto">Contacto</a>
         </nav>
-        <div class="right-icon">NI</div> 
+        <div class="right-icon" id="menu-toggle" role="button" aria-expanded="false" aria-label="Abrir Menu">NI</div> 
     </header>
 
     <section id="galeria" class="galeria container">
@@ -28,27 +28,27 @@
         
         <div class="galeria-grid">
             <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/4A3B95/FFFFFF?text=Paris" alt="Paris, França">
+                <img src="https://via.placeholder.com/400x300/4A3B95/FFFFFF?text=Paris" alt="Paris, França" loading="lazy">
                 <p>A Cidade Luz (5 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/00A5B7/FFFFFF?text=Bali" alt="Bali, Indonésia">
+                <img src="https://via.placeholder.com/400x300/00A5B7/FFFFFF?text=Bali" alt="Bali, Indonésia" loading="lazy">
                 <p>Relaxamento em Bali (7 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/4A3B95/FFFFFF?text=Kyoto" alt="Kyoto, Japão">
+                <img src="https://via.placeholder.com/400x300/4A3B95/FFFFFF?text=Kyoto" alt="Kyoto, Japão" loading="lazy">
                 <p>Cultura em Kyoto (10 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/00A5B7/FFFFFF?text=Rio" alt="Rio de Janeiro, Brasil">
+                <img src="https://via.placeholder.com/400x300/00A5B7/FFFFFF?text=Rio" alt="Rio de Janeiro, Brasil" loading="lazy">
                 <p>Sol e Samba no Rio (4 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/4A3B95/FFFFFF?text=Egito" alt="Pirâmides do Egito">
+                <img src="https://via.placeholder.com/400x300/4A3B95/FFFFFF?text=Egito" alt="Pirâmides do Egito" loading="lazy">
                 <p>Mistérios do Nilo (8 dias)</p>
             </div>
              <div class="galeria-item">
-                <img src="https://via.placeholder.com/400x300/00A5B7/FFFFFF?text=Alaska" alt="Aurora Boreal no Alasca">
+                <img src="https://via.placeholder.com/400x300/00A5B7/FFFFFF?text=Alaska" alt="Aurora Boreal no Alasca" loading="lazy">
                 <p>Aurora Boreal (6 dias)</p>
             </div>
         </div>
@@ -57,10 +57,10 @@
     <footer class="rich-footer">
         <div class="container text-center"> 
             <div class="social-links"> 
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
-                <a href="#" target="_blank" class="social-icon"><i class="fab fa-soundcloud"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                <a href="#" target="_blank" class="social-icon" aria-label="SoundCloud"><i class="fab fa-soundcloud"></i></a>
             </div>
             <div class="text-xs">
                 <p>&copy; 2025 Atlas Digital Viagens. Todos os direitos reservados.</p>
