--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,9 @@
             <a href="galeria.html">Galeria</a>
             <a href="contacto.html" class="btn-contacto">Contacto</a>
         </nav>
-        <div class="right-icon" id="menu-toggle" role="button" aria-expanded="false" aria-label="Abrir Menu">NI</div> 
+        <button class="right-icon" id="menu-toggle" aria-expanded="false" aria-label="Abrir Menu">
+            <i class="fas fa-bars"></i>
+        </button> 
     </header>
 
     <section id="contacto" class="contacto container">
