--- a/sobre.html
+++ b/sobre.html
@@ -19,9 +19,10 @@
             <a href="galeria.html">Galeria</a>
             <a href="contacto.html" class="btn-contacto">Contacto</a>
         </nav>
-        <button class="right-icon" id="menu-toggle" aria-expanded="false" aria-label="Abrir Menu">
+        <div class="right-icon" id="menu-toggle" role="button" aria-expanded="false" aria-label="Abrir Menu">
+            <i class="fas fa-user-circle"></i>
             <i class="fas fa-bars"></i>
-        </button> 
+        </div> 
     </header>
 
     <section id="sobre" class="institucional container">
