--- a/servicos.html
+++ b/servicos.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="sobre.html">Sobre</a>
-            <a href="servicos.html">Pacotes/Serviços</a>
+            <a href="servicos.html">Pacotes</a>
             <a href="galeria.html">Galeria</a>
             <a href="contacto.html" class="btn-contacto">Contacto</a>
         </nav>
