--- a/contacto.html
+++ b/contacto.html
@@ -27,16 +27,16 @@
 
     <section id="contacto" class="contacto container">
         <h2>Fale Connosco</h2>
-        <p>Preencha o formulário para receber uma proposta personalizada ou agendar a sua consultoria de 50 minutos. **O formulário de contacto funcional é uma das vantagens do Pacote Advanced.**</p>
+        <p>Preencha o formulário para receber uma proposta personalizada ou agendar a sua consultoria de 50 minutos.</p>
         
-        <p style="margin-top: 20px;">Prefere ligar? Encontre-nos em: <br>Email: info@atlasdigitalviagens.pt | Telefone: +351 9XX XXX XXX</p>
+        <p style="margin-top: 20px;"><br>Email: info@atlasviagens.pt | Telefone: +351 987 654 321</p>
 
         <form action="#" method="POST">
             <input type="text" name="nome" placeholder="Nome" required>
             <input type="email" name="email" placeholder="Email" required>
-            <input type="text" name="assunto" placeholder="Destino de Sonho / Assunto" required>
-            <textarea name="mensagem" placeholder="Mensagem / Pergunta sobre o Pacote" required></textarea>
-            <button type="submit" class="cta-button">Enviar Pedido</button>
+            <input type="text" name="assunto" placeholder="Assunto" required>
+            <textarea name="mensagem" placeholder="Mensagem" required></textarea>
+            <button type="submit" class="cta-button">Enviar</button>
         </form>
     </section>
 
