--- a/galeria.html
+++ b/galeria.html
@@ -27,7 +27,7 @@
 
     <section id="galeria" class="galeria container">
         <h2>As Nossas Experiências</h2>
-        <p>Inspire-se com algumas das viagens que ajudámos a criar. O Pacote Advanced inclui uma galeria de fotos profissional com carregamento rápido e design responsivo.</p>
+        <p>Inspire-se com algumas das viagens que ajudámos a criar.</p>
         
         <div class="galeria-grid">
             <div class="galeria-item">
