--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nós | Atlas Digital Viagens (Modernizado)</title> 
+    <title>Sobre Nós | Atlas Viagens</title> 
     <meta name="description" content="Conheça a nossa agência, o nosso processo de planeamento de viagens de 4 passos, FAQ e a equipa de especialistas."> 
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
