--- a/galeria.html
+++ b/galeria.html
@@ -12,8 +12,19 @@
 <body>
     <header>
       <a href="index.html" class="logo-link">
-        <img src="atlas.png" alt="Atlas Viagens Logótipo" class="logo-img">
+        <img src="atlas.png" alt="Atlas Viagens Logo" class="logo-img">
     </a>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="servicos.html">Pacotes</a>
+        <a href="galeria.html">Galeria</a>
+        <a href="contacto.html" class="btn-contacto">Contacto</a>
+    </nav>
+    <div class="right-icon" id="menu-toggle" role="button" aria-expanded="false" aria-label="Abrir Menu">
+        <i class="fas fa-user-circle"></i>
+        <i class="fas fa-bars"></i>
+    </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="sobre.html">Sobre</a>
